--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "15.4.1",
-    "react-native": "0.39.0"
+    "react-native": "0.39.0",
+    "react-native-camera": "^0.4.0"
   }
 }
